--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_auth:
+  firebase_core:
+  cloud_firestore:
+  lint:
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+flutter_native_splash:
+  image: assets/images/splash.png
+  color: "39CB2C"
+  android_gravity: fill
+  fullscreen: true
+
+
 dev_dependencies:
+  flutter_native_splash: ^1.1.4+1
   flutter_test:
     sdk: flutter
 
@@ -45,9 +57,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/splash.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
