--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,14 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 flutter_native_splash:
-  image: assets/images/splash.png
+  image: assets/splash.png
   color: "39CB2C"
   android_gravity: fill
   fullscreen: true
 
 
 dev_dependencies:
-  flutter_native_splash: ^1.1.4+1
+  flutter_native_splash: ^1.1.5+1
   flutter_test:
     sdk: flutter
 
@@ -58,8 +58,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/splash.png
-
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
